# ros-obstacle-avoidance-robot

./: CMakeLists.txt  Readme.md  package.xml
launch/: simulation.launch
scripts/: obstacle_avoidance_node.py
