<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance</name>
  <version>1.0.0</version>
  <description>ROS obstacle avoidance using LiDAR</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
</package>